--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
 				</div>
 
 				<div class="col-md-7 mb-5 mb-md-0">
-					<form action="" class="site-form">
+					<form action="mailto:olllefrid@gmail.com" class="site-form">
 						<h3 class="mb-5">Get In Touch</h3>
 						<div class="form-group">
 							<input type="text" class="form-control px-3 py-4" placeholder="Your Name">
