--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 						<span class="date"><span class="icon-calendar"></span> 2013/09 - 2017/03</span>
 						<h3>Bachelor's degree in Air Transport & Logistics</h3>
 						<p>Three year's education of understanding transport & logistics focused on and around the airport industry.</p>
-						<span class="school">Linköping's Universirt</span>
+						<span class="school">Linköping's University</span>
 					</div>
 					<div class="resume-item mb-4">
 						<span class="date"><span class="icon-calendar"></span> 2018/09 - Present</span>
